mobile menu layout bug fix

--- a/pages/LadingPage/components/Header/styles.module.scss
+++ b/pages/LadingPage/components/Header/styles.module.scss
@@ -54,16 +54,17 @@
             width: 100vw;
     
             position: absolute;
-            top: 0;
+            top: -10px;
             left: 0;
     
             background: var(--blue-gray-900);
+
+            padding: 0;
     
             transition: opacity .3s ease-in-out;
     
             &.closed{
                 visibility: hidden;
-    
                 z-index: -1;
                 opacity: 0;
             }
@@ -90,6 +91,8 @@
             }
     
             li{
+                margin: 0;
+                width: 100%;
                 display: flex;
                 align-items: center;
                 justify-content: center;
